--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,46 @@
-mysql:
-  image: mysql
-  ports:
-    - "13306:3306"
-  environment:
-    - MYSQL_ROOT_PASSWORD=password
-  volumes:
-    - /opt/ids-data:/var/lib/mysql
+version: '2'
 
-snorby:
-  image: polinux/snorby
-  ports:
-    - "3000:3000"
-  links:
-    - mysql
-  environment:
-    - DB_ADDRESS=mysql
-    - DB_USER=root
-    - DB_PASS=password
+services:
+  mysql:
+    image: mysql
+    ports:
+      - "13306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+    volumes:
+      - /opt/ids-data:/var/lib/mysql
 
-barnyard2:
-  image: toulet/docker-barnyard2
-  links:
-    - mysql
-  volumes:
-    - /etc/suricata:/etc/suricata
-    - /var/log/suricata:/var/log/suricata
-  environment:
-    - DB_HOST=mysql
-    - DB_USER=root
-    - DB_PASS=password
-    - DB_NAME=snorby
-    - SENSOR_NAME=IDS
+  snorby:
+    image: polinux/snorby
+    depends_on: 
+      - mysql
+    ports:
+      - "3000:3000"
+    links:
+      - mysql
+    volumes:
+      - ./tools:/tools
+    environment:
+      - DB_ADDRESS=mysql
+      - DB_USER=root
+      - DB_PASS=password
+    entrypoint: ["/tools/wait-for-mysql.sh", "mysql", "/bootstrap.sh"]
 
+  barnyard2:
+    image: toulet/docker-barnyard2
+    depends_on: 
+      - mysql
+    links:
+      - mysql
+    volumes:
+      - /etc/suricata:/etc/suricata
+      - /var/log/suricata:/var/log/suricata
+      - ./tools:/tools
+    environment:
+      - DB_HOST=mysql
+      - DB_USER=root
+      - DB_PASS=password
+      - DB_NAME=snorby
+      - SENSOR_NAME=IDS
+    entrypoint: ["/tools/wait-for-mysql.sh", "mysql", "/entrypoint.sh"]
 
